# bezier-tests

./: CMakeLists.txt
code/: Bezier.cpp  Bezier.hpp  BezierChain.cpp  BezierChain.hpp  SingleQBezier.cpp  SingleQBezier.hpp  Vector.cpp  Vector.hpp  main.cpp  utilities.hpp
